--- a/src/main/webapp/css/table.css
+++ b/src/main/webapp/css/table.css
@@ -6,25 +6,26 @@
 }
 
 .tbl{
-  border-collapse: collapse;
-  text-align: left;
-  line-height: 1.5;
-  margin : 20px 10px;
+  border-collapse: collapse; /* 테이블간 간격 없음 */
+  line-height: 1.5;			 
+  margin: 0 auto;			 /* 표 가운데 정렬  */
 }
 
 .th{
-  width: 155px;
-  padding: 10px;
+  width: 160px;   	/* 테이블 크기 조정  */
+  padding:10px;	  	/* 테이블 크기 조정  */
   font-weight: bold;
-  vertical-align: top;
   color: white;
+  border-bottom: 1px solid gray;
+  border-right : 1px solid gray;
   background: #00BA2B ;
 }
 
 .td{
-  width: 155px;
-  padding: 10px;
-  vertical-align: top;
-  border-bottom: 1px solid #ccc;
-  background: #eee;
+  width: 160px; 	/* 테이블 크기 조정  */
+  padding:10px; 	/* 테이블 크기 조정  */
+  text-align: center; /* 내용 가운데 정렬  */
+  border-bottom: 1px solid gray;
+  border-right : 1px solid gray;
+  background: #D9E0DD;
 }
